Fix off-center button

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -228,7 +228,6 @@ footer {
 #prompt-signup-close button {
   padding-right: 10px;
   padding-top: 4px;
-  padding-bottom: 20px;
 }
 
 #prompt-signup.fade.in {
